implementazione DAO concreti, controller logici, e test per controller logici, più svariati miglioramenti